<?xml version="1.0"?>
<package format="2">
  <name>atemr_msgs</name>
  <version>0.0.0</version>
  <description>The atemr_msgs package</description>
  <maintainer email="leocorp96@gmail.com">ephson</maintainer>
  <license>MIT</license>
  <url type="repository">git@github.com:LCP-WORKS/atemr_msgs.git</url>
  <author email="leocorp96@gmail.com">ephson</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
